--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <html>
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    $.getJSON("/json/test.json", function(json){
-      console.log(json);
-      document.getElementById('result').innerHTML = JSON.stringify(json);
-    });
+    <script>
+      function test(){
+        $.getJSON("/json/test.json", function(json){
+          console.log(json);
+          document.getElementById('result').innerHTML = JSON.stringify(json);
+        });
+      }
+    </script>
   </head>
   <body>
     <h1> Good morning, welcome to jyydev.github.io :)</h1>
