--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </script>
   </head>
   <body>
-    <h1> t3, Good morning, welcome to jyydev.github.io :)</h1>
+    <h1> Good morning, welcome to jyydev.github.io :)</h1>
     <button onclick="test()">test</button>
     <div id="result">test</div>
   </body>
