edit from play.js on ipad

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <h1> Good morning, welcome to jyydev.github.io :)</h1>
+    <h1> Successfully updated from Play.js on iPad :)</h1>
     <button onclick="test()">test</button>
     <div id="result">test</div>
   </body>
