added:  <meta name="apple-mobile-web-app-capable" content="yes">

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
       //var jsonFile = '/json/test.json';
@@ -16,6 +17,7 @@
   <body>
     <h1> Good morning, welcome to jyydev.github.io :)</h1>
     <h1> Successfully updated from Play.js on iPad :)</h1>
+    <h1> test</h1>
     <button onclick="test()">test</button>
     <div id="result">test</div>
   </body>
