--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <h1> Good morning, welcome to jyydev.github.io :)</h1>
     <h1> Successfully updated from Play.js on iPad :)</h1>
     <h1> test</h1>
+    <a href="https://www.google.com" target="_blank">just a link</a>
+    <a href="https://www.google.com" target="_blank">test blank href</a>
     <button onclick="test()">test</button>
     <div id="result">test</div>
   </body>
