--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" sizes="128x128" href="https://www.google.com.my/url?sa=i&url=https%3A%2F%2Fwww.flaticon.com%2Ffree-icon%2Fgithub-logo_25231&psig=AOvVaw0H1BRHTIY7WW0tMLENtXbC&ust=1622625641998000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNjp5tqN9vACFQAAAAAdAAAAABAD">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
       //var jsonFile = '/json/test.json';
@@ -18,8 +19,9 @@
     <h1> Good morning, welcome to jyydev.github.io :)</h1>
     <h1> Successfully updated from Play.js on iPad :)</h1>
     <h1> test</h1>
-    <a href="https://www.google.com" target="_blank">just a link</a>
-    <a href="https://www.google.com" target="_blank">test blank href</a>
+    <a href="https://www.google.com" target="_blank">just a link</a><br>
+    <a href="https://www.google.com" target="_blank">test blank href</a><br>
+    <img src="https://www.google.com.my/url?sa=i&url=https%3A%2F%2Fwww.flaticon.com%2Ffree-icon%2Fgithub-logo_25231&psig=AOvVaw0H1BRHTIY7WW0tMLENtXbC&ust=1622625641998000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNjp5tqN9vACFQAAAAAdAAAAABAD"/>
     <button onclick="test()">test</button>
     <div id="result">test</div>
   </body>
