--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-icon" sizes="128x128" href="https://www.google.com.my/url?sa=i&url=https%3A%2F%2Fwww.flaticon.com%2Ffree-icon%2Fgithub-logo_25231&psig=AOvVaw0H1BRHTIY7WW0tMLENtXbC&ust=1622625641998000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNjp5tqN9vACFQAAAAAdAAAAABAD">
+    <link rel="apple-touch-icon" sizes="128x128" href="https://img-premium.flaticon.com/png/512/25/25231.png?token=exp=1622540844~hmac=969bd336401e4ff5355ee8c0de76880a">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
       //var jsonFile = '/json/test.json';
@@ -21,7 +22,7 @@
     <h1> test</h1>
     <a href="https://www.google.com" target="_blank">just a link</a><br>
     <a href="https://www.google.com" target="_blank">test blank href</a><br>
-    <img src="https://www.google.com.my/url?sa=i&url=https%3A%2F%2Fwww.flaticon.com%2Ffree-icon%2Fgithub-logo_25231&psig=AOvVaw0H1BRHTIY7WW0tMLENtXbC&ust=1622625641998000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNjp5tqN9vACFQAAAAAdAAAAABAD"/>
+ <img src="https://img-premium.flaticon.com/png/512/25/25231.png?token=exp=1622540844~hmac=969bd336401e4ff5355ee8c0de76880a"/>
     <button onclick="test()">test</button>
     <div id="result">test</div>
   </body>
