--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-icon" sizes="128x128" href="https://img-premium.flaticon.com/png/512/25/25231.png?token=exp=1622540844~hmac=969bd336401e4ff5355ee8c0de76880a">
+    <link rel="apple-touch-icon" sizes="128x128" href="https://pngimg.com/uploads/github/github_PNG80.png">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
@@ -22,7 +22,7 @@
     <h1> test</h1>
     <a href="https://www.google.com" target="_blank">just a link</a><br>
     <a href="https://www.google.com" target="_blank">test blank href</a><br>
- <img src="https://img-premium.flaticon.com/png/512/25/25231.png?token=exp=1622540844~hmac=969bd336401e4ff5355ee8c0de76880a"/>
+ <img src="https://pngimg.com/uploads/github/github_PNG80.png"/>
     <button onclick="test()">test</button>
     <div id="result">test</div>
   </body>
