--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-icon" sizes="128x128" href="https://pngimg.com/uploads/github/github_PNG80.png">
-
+    <link rel="apple-touch-icon" sizes="128x128" href="github.png">
+<link rel="icon" sizes="192x192" href="github.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
       //var jsonFile = '/json/test.json';
