--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
   <head>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="apple-touch-icon" sizes="128x128" href="github.png">
-<link rel="icon" sizes="192x192" href="github.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
       //var jsonFile = '/json/test.json';
@@ -19,10 +18,9 @@
   <body>
     <h1> Good morning, welcome to jyydev.github.io :)</h1>
     <h1> Successfully updated from Play.js on iPad :)</h1>
-    <h1> test</h1>
     <a href="https://www.google.com" target="_blank">just a link</a><br>
     <a href="https://www.google.com" target="_blank">test blank href</a><br>
- <img src="https://pngimg.com/uploads/github/github_PNG80.png"/>
+   <img src="github.png"/>
     <button onclick="test()">test</button>
     <div id="result">test</div>
   </body>
