--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <h1> Good morning, welcome to jyydev.github.io :)</h1>
-    <h1> Successfully updated from Play.js on iPad :)</h1>
+    <h1> play.js: jyydev.githu.io (icloud)</h1>
     <a href="https://www.google.com" target="_blank">just a link</a><br>
     <a href="https://www.google.com" target="_blank">test blank href</a><br>
    <img src="github.png"/>
