--- a/demo/3d/v0/index.html
+++ b/demo/3d/v0/index.html
@@ -7,7 +7,7 @@
 		</style>
 	</head>
 	<body>
-		<script src="../../libs/three.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
         <script src="game.js"></script>
 		<script>
             document.addEventListener("DOMContentLoaded", function(){
